Various: Update for Hudson -> Jenkins transition in texts
Signed-off-by: Tom Rini <tom_rini@mentor.com>

--- a/src/main/webapp/help-labmanager-idleOption.html
+++ b/src/main/webapp/help-labmanager-idleOption.html
@@ -4,10 +4,10 @@
     determined to be idle.  The choices are to perform a Shutdown, a Shutdown
     and Revert or a Suspend.  The shutdown action will attempt to perform a
     clean shutdown of the OS.  The Shutdown and Revert option will perform a
-    clean shutdown (which is needed in certain cases to ensure <i>Hudson</i>
+    clean shutdown (which is needed in certain cases to ensure <i>Jenkins</i>
     sees the slave go away) and will then restore the Virtual Machine to its
     last revert point.  This revert point (called a snapshot in Lab Manager
-    terminology) must be created outside of <i>Hudson</i>.
+    terminology) must be created outside of <i>Jenkins</i>.
     </p>
     <p>
     It is recommended to perform a Shutdown on the Virtual Machine rather than
